--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "jquery": "~2.1.4",
     "modernizr": "~2.8.3",
     "foundation": "~5.5.2",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "angular-local-storage": "~0.2.1"
   },
   "devDependencies": {}
 }
