--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,11 @@
     "modernizr": "~2.8.3",
     "foundation": "~5.5.2",
     "font-awesome": "~4.3.0",
-    "angular-local-storage": "~0.2.1"
+    "angular-local-storage": "~0.2.1",
+    "angular-momentjs": "~0.1.9",
+    "moment-timezone": "~0.4.0",
+    "angular-bootstrap": "~0.13.0",
+    "angular-animate": "~1.4.0"
   },
   "devDependencies": {}
 }
