--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-momentjs": "~0.1.9",
     "moment-timezone": "~0.4.0",
     "angular-bootstrap": "~0.13.0",
-    "angular-animate": "~1.4.0"
+    "angular-animate": "~1.4.0",
+    "ngFx": "~1.1.0"
   },
   "devDependencies": {}
 }
