--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "moment-timezone": "~0.4.0",
     "angular-bootstrap": "~0.13.0",
     "angular-animate": "~1.4.0",
-    "ngFx": "~1.1.0"
+    "ngFx": "~1.1.0",
+    "jquery-nicescroll": "~3.6.0"
   },
   "devDependencies": {}
 }
