--- a/bower.json
+++ b/bower.json
@@ -2,18 +2,23 @@
   "name": "tabmagic",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.3.15",
-    "jquery": "~2.1.4",
-    "modernizr": "~2.8.3",
+    "angular": "~1.4.6",
+    "angular-animate": "~1.4.6",
+    "angular-aria": "~1.4.6",
+    "angular-bootstrap": "~0.13.4",
+    "angular-local-storage": "~0.2.2",
+    "angular-material": "~0.11.1",
+    "angular-momentjs": "~0.2.2",
+    "font-awesome": "~4.4.0",
     "foundation": "~5.5.2",
-    "font-awesome": "~4.3.0",
-    "angular-local-storage": "~0.2.1",
-    "angular-momentjs": "~0.1.9",
+    "jquery": "~2.1.4",
+    "jquery-placeholder": "~2.1.3",
+    "jquery.cookie": "~1.4.1",
+    "modernizr": "~3.0.0",
+    "moment": "~2.10.6",
     "moment-timezone": "~0.4.0",
-    "angular-bootstrap": "~0.13.0",
-    "angular-animate": "~1.4.0",
     "ngFx": "~1.1.0",
-    "jquery-nicescroll": "~3.6.0"
+    "jquery.nicescroll": "jquery-nicescroll#~3.6.0"
   },
   "devDependencies": {}
 }
