--- a/bower.json
+++ b/bower.json
@@ -1,24 +1,27 @@
 {
   "name": "tabmagic",
+  "private": true,
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.4.6",
-    "angular-animate": "~1.4.6",
-    "angular-aria": "~1.4.6",
+    "angular": "~1.4.7",
+    "angular-animate": "~1.4.7",
+    "angular-aria": "~1.4.7",
     "angular-bootstrap": "~0.13.4",
-    "angular-local-storage": "~0.2.2",
-    "angular-material": "~0.11.1",
+    "angular-material": "~0.11.2",
     "angular-momentjs": "~0.2.2",
     "font-awesome": "~4.4.0",
-    "foundation": "~5.5.2",
+    "foundation": "~5.5.3",
     "jquery": "~2.1.4",
+    "jquery.nicescroll": "~3.6.0",
     "jquery-placeholder": "~2.1.3",
-    "jquery.cookie": "~1.4.1",
-    "modernizr": "~3.0.0",
+    "modernizr": "~3.1.0",
     "moment": "~2.10.6",
     "moment-timezone": "~0.4.0",
     "ngFx": "~1.1.0",
-    "jquery.nicescroll": "jquery-nicescroll#~3.6.0"
+    "angular-local-storage": "~0.2.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "chai": "~3.3.0",
+    "mocha": "~2.3.3"
+  }
 }
