--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
   "name": "tabmagic",
-  "version": "0.0.0",
+  "private": true,
   "dependencies": {},
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-bower-install": "~1.0.0",
-    "grunt-chrome-manifest": "~0.2.0",
-    "grunt-concurrent": "~0.5.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-compass": "~0.7.0",
-    "grunt-contrib-compress": "~0.9.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-connect": "~0.7.1",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-htmlmin": "~0.2.0",
-    "grunt-contrib-imagemin": "~0.7.1",
-    "grunt-contrib-jshint": "~0.9.2",
-    "grunt-contrib-uglify": "~0.4.0",
+    "grunt": "~0.4.5",
+    "grunt-angular-templates": "^0.5.7",
+    "grunt-babel": "^5.0.1",
+    "grunt-bower-install": "~1.6.0",
+    "grunt-chrome-manifest": "~0.3.0",
+    "grunt-concurrent": "~2.0.3",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-compass": "^1.0.4",
+    "grunt-contrib-compress": "~0.13.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-connect": "~0.11.2",
+    "grunt-contrib-copy": "~0.8.1",
+    "grunt-contrib-cssmin": "~0.13.0",
+    "grunt-contrib-htmlmin": "~0.4.0",
+    "grunt-contrib-imagemin": "~0.9.4",
+    "grunt-contrib-jshint": "~0.11.3",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-uglify": "~0.9.2",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-mocha": "~0.4.10",
-    "grunt-svgmin": "~0.4.0",
-    "grunt-usemin": "~2.1.0",
-    "jshint-stylish": "~0.1.5",
-    "load-grunt-tasks": "~0.4.0",
-    "time-grunt": "~0.3.1"
+    "grunt-injector": "^0.6.0",
+    "grunt-mocha": "~0.4.13",
+    "grunt-svgmin": "~2.0.1",
+    "grunt-usemin": "~3.1.1",
+    "jit-grunt": "^0.9.1",
+    "jshint-stylish": "~2.0.1",
+    "ng-annotate": "^1.0.2",
+    "time-grunt": "~1.2.1"
   },
   "engines": {
     "node": ">=0.8.0"
