--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "~1.4.7",
-    "angular-animate": "~1.4.7",
+    "angular-animate": "~1.4.8",
     "angular-aria": "~1.4.7",
     "angular-bootstrap": "~0.13.4",
     "angular-material": "~0.11.2",
@@ -23,5 +23,8 @@
   "devDependencies": {
     "chai": "~3.3.0",
     "mocha": "~2.3.3"
+  },
+  "resolutions": {
+    "angular-animate": "~1.3.0"
   }
 }
