--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.4.7",
     "angular-animate": "~1.4.8",
     "angular-aria": "~1.4.7",
-    "angular-bootstrap": "~0.13.4",
     "angular-material": "~0.11.2",
     "angular-momentjs": "~0.2.2",
     "font-awesome": "~4.4.0",
@@ -17,14 +15,17 @@
     "modernizr": "~3.1.0",
     "moment": "~2.10.6",
     "moment-timezone": "~0.4.0",
+    "angular-local-storage": "~0.2.2",
     "ngFx": "~1.1.0",
-    "angular-local-storage": "~0.2.2"
+    "angular": "~1.4.8",
+    "angular-bootstrap": "~0.14.3"
   },
   "devDependencies": {
     "chai": "~3.3.0",
     "mocha": "~2.3.3"
   },
   "resolutions": {
-    "angular-animate": "~1.3.0"
+    "angular-animate": "~1.3.0",
+    "angular": "~1.3.0"
   }
 }
