--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
     "angular-local-storage": "~0.2.2",
     "ngFx": "~1.1.0",
     "angular": "~1.4.8",
-    "angular-bootstrap": "~0.14.3"
+    "angular-bootstrap": "~0.14.3",
+    "angular-ui-mask": "~1.6.6",
+    "angular-ui-utils": "~3.0.0"
   },
   "devDependencies": {
     "chai": "~3.3.0",
