--- a/app/manifest.json
+++ b/app/manifest.json
@@ -10,6 +10,8 @@
   "default_locale": "en",
   "background": {
     "scripts": [
+      "bower_components/angular/angular.js",
+      "bower_components/moment/moment.js",
       "scripts/chromereload.js",
       "scripts/background.js"
     ]
@@ -49,6 +51,8 @@
     "management",
     "sessions",
     "storage",
+    "alarms",
+    "notifications",
     "http://*/*",
     "https://*/*"
   ],
