--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "angular-bootstrap": "~0.14.3",
     "angular-ui-mask": "~1.6.6",
     "angular-ui-utils": "~3.0.0",
-    "angular-messages": "~1.4.8"
+    "angular-messages": "~1.4.8",
+    "ng-inline-edit": "~0.7.0"
   },
   "devDependencies": {
     "chai": "~3.3.0",
